Rapid Prd/src/objects/Transfer_Member__c.object
<CustomObject>
    <description>Database of team members from external partners</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quicken Loans</fullName>
                </value>
                <value>
                    <fullName>One Reverse Mortgage, LLC.</fullName>
                </value>
                <value>
                    <fullName>Bizdom</fullName>
                </value>
                <value>
                    <fullName>Title Source, Inc.</fullName>
                </value>
                <value>
                    <fullName>Xenith LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_of_Mortgage_Banking__c</fullName>
        <label>Director of Mortgage Banking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of external members</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Internal ID for all the external members</description>
        <displayFormat>Ext-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberId18Char__c</fullName>
        <formula>casesafeid(Id)</formula>
        <label>MemberId18Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Vice_President__c</fullName>
        <label>Regional Vice President</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transfer Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Regional_Vice_President__c</columns>
        <columns>Director_of_Mortgage_Banking__c</columns>
        <columns>External_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>